# gigza-backend

./: README.md  main.py  pyproject.toml  requirements.txt
utils/: crud.py  database.py  models.py  schemas.py
