[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Gigza Referral Backend"
authors = ["Ofem Eteng <ofemeteng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
taskipy = "^1.10.3"
SQLAlchemy = "^2.0.4"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
dev = "uvicorn main:app --reload"
test = "pytest"
